--- a/public/information_post.html
+++ b/public/information_post.html
@@ -61,6 +61,9 @@
       button#dropdownMenuButton1.dropdown-toggle::after{
         display: none;
       }
+      button#dropdownMenuButton1_h.dropdown-toggle::after {
+        display: none;
+      }
       #dropdownMenuButton1_h{
       display: inline-block !important;
     }
