--- a/public/mypage_modify.html
+++ b/public/mypage_modify.html
@@ -51,13 +51,15 @@
         <img src="./img/logo02.PNG" alt="" id="logo">
         </a>
         <!-- nbsp텍스트 영역으로 들여옴, col-md 바꿈 -->
-        <ul class="nav col-12 col-md-5 mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 link-light">Home</a></li>
-          <li><a href="#" class="nav-link px-2 link-light">About</a></li>
-          <li><a href="#" class="nav-link px-2 link-light">Contents</a></li>
-          <li><a href="#" class="nav-link px-2 link-light">Shop</a></li>
-          <li><a href="#" class="nav-link px-2 link-light">Recommend</a></li>
-        </ul>
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="http://127.0.0.1:3000/main" class="nav-link px-2 link-light">Home</a></li>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><a href="http://127.0.0.1:3000/information_vegan.html" class="nav-link px-2 link-light">About</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><a href="http://127.0.0.1:3000/information_news.html" class="nav-link px-2 link-light">Contents</a></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><a href="http://127.0.0.1:3000/show_item" class="nav-link px-2 link-light">Shop</a></li>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><a href="http://127.0.0.1:3000/recommend_start.html" class="nav-link px-2 link-light">Recommend</a></li>
+          </ul>
     
         <div class="col-md-3 col-sm-2 text-end">
           <div class="dropdown">
