--- a/public/recommend_Q1.html
+++ b/public/recommend_Q1.html
@@ -149,6 +149,13 @@
     .row {
       text-align: center;
     }
+    
+    main{
+      background-color: white;
+    }
+    body{
+      background-color: rgb(238,238,238);
+    }
   </style>
 
 
@@ -223,6 +230,7 @@
     </div>
   </header>
 
+<main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
   <br><br>
   <p class="title" align="center">재미로보는 비건제품 추천</p>
   </div>
@@ -279,7 +287,7 @@
       </div>
     </div>
   </div>
-
+</main>
 
 
 
