--- a/public/recommend_result.html
+++ b/public/recommend_result.html
@@ -211,7 +211,7 @@ body{
     </header>
 
     <main class="container my-5 justify-content-center d-flex flex-column min-vh-100">
-
+      <img src="./img/white.JPG" alt="" class="mx-2 my-5">
     <br><br>
     
     <p class = "Que" align = "center">회원님에게 추천 드릴 제품입니다</p>
